--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <title>Page Title</title>
 </head>
 <body>
-<p>first paragraph.</p>
+	<p>first paragraph.</p>
+	<p> This is another paragraph </p>
 </body>
 <html>
 
